2005-06-23 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Applied patch 1226111
        * Added a warning message when php scripts have a modification time in
          in the future and the debug is enabled.

2005-06-20 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Set the test value shared memory to 32mb instead of 64mb because the
          test will fail on 2.6 kernels where 32mb is the default value. (#1203253)
        * Reverted the patch for the gc_maxlifetime setting when using
          user functions for the session handler. I can't find a way to
          access the current value instead of the ini setting.
          Using the session api is the preffered session handling way anyway.

2005-05-22 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Bumped version to 0.9.4-dev
        * Changed hash_mm prototype in eaccelerator.h to non-inline (Compaq c compiler)
        * Fixes from patch 1206311 + some unused variable clean ups

2005-05-18 Franck Tabary <franck34 at users.sourceforge.net>

        * released eAccelerator 0.9.3 final

2005-05-16 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added --without-eaccelerator-use-inode configure switch to disable the use
          of inode numbers for the hash keys (Feature request 1201159). The default
          behaviour doesn't change.
        * Fix for bug 1202296 based on patch 1202708

2005-05-15 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Compile fix for bug 1201564.

2005-05-14 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * The session lifetime patch only fixed the problem when using one type of session handler. It's now 
          also fixed for the other type of session handler.

2005-05-12 Franck Tabary <franck34 at users.sourceforge.net>

        * released eAccelerator 0.9.3-rc2

2005-05-11 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
