@@ -1,3 +1,7 @@
+2005-06-24 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+        * The future check is removed because mtime are only checked on changes
+          so caching files from the future isn't a problem.
+
 2005-06-23 Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
         * Applied patch 1226111
